[package]
name = "WinKeyMaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
libc = "0.2.66"
winapi = {version = "0.3", features = ["winuser", "handleapi", "processthreadsapi", "securitybaseapi"]}